[package]
name = "smon"
version = "0.1.1"
edition = "2024"
description = "Minimalistic TUI serial monitor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VladasZ/smon"
readme = "README.md"
keywords = ["serial", "tui", "monitor", "uart", "terminal"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "smon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
memchr = { workspace = true }
nucleo-matcher = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialport = { workspace = true }
tokio = { workspace = true }

[workspace]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29.0"
memchr = "2.8"
nucleo-matcher = "0.3.1"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
rmcp = { version = "2.0.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serialport = "4.9.0"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
